<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="20dp"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:text="@string/login" />

                <EditText
                    android:id="@+id/loginET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:hint="@string/login_h"
                    android:inputType="textEmailAddress"
                    android:paddingTop="5dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_marginStart="30dp"
                    android:ems="10"
                    android:hint="@string/password_h"
                    android:inputType="textPassword"
                    android:paddingTop="5dp" />

                <Button
                    android:id="@+id/signInB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:enabled="false"
                    android:paddingEnd="25dp"
                    android:paddingStart="25dp"
                    android:text="@string/sign_in" />
            </LinearLayout>
        </ScrollView>

        <View style="@style/dividerHorizontal" />

        <TextView
            android:id="@+id/signUpTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/no_acc" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/progressFL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/noConnectionLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/error_no_connection" />

        <ImageButton
            android:id="@+id/retryIB"
            app:srcCompat="@drawable/refresh_black"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/round_white"
            android:elevation="5dp"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:tint="@color/colorPrimary" />
    </LinearLayout>

</FrameLayout>